# lumina_project

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sqlfluff  404.html  CHANGELOG.md  ESTRUCTURA_PROYECTO.txt  IMPLEMENTACION_COMPLETADA.md  LEEME_PRIMERO.md  LICENSE  Makefile  NUEVAS_FUNCIONALIDADES.md  README.md  RESUMEN_EJECUTIVO.md  alembic.ini  check_1900.py  docker-bake.hcl  docker-compose.gpu-8gb.yml  docker-compose.yml  index.html  mkdocs.yml  mlflow.db  objects.inv  pyproject.toml  pytest.ini  repro_yf.py  run_manual.sh  sitemap.xml  test_new_features.py  verificar_instalacion.sh
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_phase1_schemas.py  002_add_arena_tables.py  003_add_portfolio_and_backtest.py
assets/css/: mermaid-zoom.css  nav-indent.css
assets/js/: mermaid-zoom.js
backend/: .env.example  __init__.py  alembic.ini  app.py  index.html  lstm_service.py  lumina.db  news_service.py  requirements.txt
backend/alembic/: env.py
backend/api/: __init__.py  dependencies.py  deps.py  job_store.py  main.py  middleware.py  permissions.py  schemas.py
backend/backtest/: index.html
backend/backtesting/: __init__.py  engine.py  event_driven.py  monte_carlo.py  strategies.py  transaction_costs.py  vectorized.py
backend/cognition/: __init__.py
backend/config/: __init__.py  constants.py  logging.py  logging_config.py  settings.py
backend/core/: __init__.py
backend/data_engine/: __init__.py
backend/db/: 00_create_mlflow_db.sh  __init__.py  models.py  timescale_setup.sql
backend/execution/: __init__.py  orchestrator.py
backend/feature_store/: __init__.py  client.py  definitions.py  offline.py  online.py
backend/fusion/: __init__.py  attention.py  concatenation.py  cross_attention.py  nexus.py  parity_check.py  state_assembler.py  state_builder.py  trainer.py
backend/health/: __init__.py
backend/integration/: __init__.py  agent_loop.py  e2e_loop.py
backend/ml_engine/: __init__.py
backend/nlp_engine/: __init__.py  finbert_analyzer.py  news_scraper.py  reddit_scraper.py  sentiment_aggregator.py  twitter_scraper.py
backend/paper_trading/: __init__.py  reports.py  runner.py
backend/perception/: __init__.py
backend/quant_engine/: __init__.py
backend/simulation/: __init__.py  article_simulation.py  backtest_worker.py
backend/utils/: __init__.py  calculations.py  formatting.py  validation.py
backend/workers/: __init__.py  backtest_tasks.py  celery_app.py  data_tasks.py  ml_tasks.py  utils.py
cognition_layer/: index.html
cognition_layer/ppo_agent/: index.html
cognition_layer/spartan/: index.html
data_engine/: index.html
data_engine/ingestion/: index.html
data_engine/market_collectors/: index.html
data_engine/storage/: index.html
docker/: Dockerfile.api  Dockerfile.brain  Dockerfile.brain.blackwell  Dockerfile.data  Dockerfile.frontend  Dockerfile.jupyter  Dockerfile.ml  Dockerfile.mlflow  Dockerfile.perception  Dockerfile.react  Dockerfile.streamlit  docker-compose.yml  docker-entrypoint.sh
docker/services/: nginx.conf  redis.conf  timescale.conf
docs/: LUMINA_V3_PROJECT_STRUCTURE.md  LUMINA_V3_ROADMAP.md  Lumina_V3_Deep_Fusion_Architecture.md  SECURITY_AUDIT.md  spartan_arena.md
docs/wiki/: index.md  overview.md
execution/: index.html
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/react-app/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.js  App.tsx  LSTMPredictor.css  LSTMPredictor.js  NewsPanel.css  NewsPanel.js  PanelOperar.css  PanelOperar.js  Portafolio.css  Portafolio.js  PortfolioAnalytics.css  PortfolioAnalytics.js  StockChart.js  index.css  main.tsx  vite-env.d.ts
frontend/streamlit-app/: app.py  requirements.txt
frontend/streamlit_app/: app.py
fusion_layer/: index.html
fusion_layer/cross_modal/: index.html
fusion_layer/state_assembler/: index.html
hooks/: github_ref.py
infra/: index.html
js/: auto_refresh_build_pages.js
notebooks/: 01_data_exploration.ipynb  01_data_exploration_yfinance.ipynb  02_feature_engineering.ipynb  02_tft_prototype.ipynb  03_model_training.ipynb  03_semantic_distillation_smoke.ipynb  04_backtesting.ipynb  04_graph_construction.ipynb  05_fusion_parity_check.ipynb  05_risk_analysis.ipynb  06_tft_encoder_research.ipynb  06_uncertainty_calibration.ipynb  07_end_to_end_paper_trading_dry_run.ipynb  07_gnn_correlation_analysis.ipynb  08_arena_validation.ipynb  08_fusion_layer_experiments.ipynb  09_rl_agent_training.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploration_yfinance-checkpoint.ipynb  02_tft_prototype-checkpoint.ipynb  03_semantic_distillation_smoke-checkpoint.ipynb  04_graph_construction-checkpoint.ipynb  05_fusion_parity_check-checkpoint.ipynb  06_uncertainty_calibration-checkpoint.ipynb  07_end_to_end_paper_trading_dry_run-checkpoint.ipynb
notebooks/02/: 02_features_spy.parquet
notebooks/03/: 03_expert_labels.parquet  03_v2_lstm_expert.pt
notebooks/06/: 06_tft_encoder_best.pt  06_val_embeddings_temporal.npy
overview/system/: index.html
perception_layer/: index.html
requirements/: base.txt  dev.txt  ml.txt  production.txt  streamlit.txt
scripts/: backfill_historical.py  benchmark_e2e.py  benchmark_feature_store.py  deploy.sh  dump_openapi.py  export_to_latex.py  generate_qa_report.py  init_db.py  merge_bc_datasets.py  run_arena.py  run_article_simulations.py  run_backtest.py  run_crisis_drill.py  run_paper_trading.py  run_parity_check.py  seed_data.py  setup_docker.sh  setup_nvidia_docker.sh  setup_system.sh  train.sh  train_agent.py  train_from_feedback.py  train_portfolio_demo.py  validate_docker_config.sh
search/: search_index.json
simulation/: index.html
tests/: conftest.py  run_tests.sh  test_api_endpoints.py  test_celery_tasks.py  test_data_collection.py  test_docker_services.py  test_integration_full.py  test_regressions.py  test_xgboost_model.py
(+316 files in other folders)
