# pyproject.toml
# Lumina Quant Lab V3 - Project Configuration
# Deep Reinforcement Learning Trading Platform

[project]
name = "lumina-quant-lab"
version = "3.0.0"
description = "Advanced Quantitative Trading Platform with Deep Reinforcement Learning and Multi-Modal Perception"
authors = [
    {name = "Fran", email = "fran@luminaquant.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
keywords = [
    "trading",
    "quantitative-finance",
    "reinforcement-learning",
    "algorithmic-trading",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "timeseries",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.25,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    
    # Cache & Message Queue
    "redis>=5.0.1,<6.0.0",
    "celery>=5.3.4,<6.0.0",
    
    # Deep Learning & ML
    "torch>=2.1.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.4,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    
    # Reinforcement Learning
    "gymnasium>=0.29.1,<1.0.0",
    
    # Data Collection
    "yfinance>=0.2.36,<0.3.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.1.0,<6.0.0",
    
    # Financial Data APIs
    "alpha-vantage>=2.3.1,<3.0.0",
    "pandas-datareader>=0.10.0,<1.0.0",
    
    # Technical Analysis (Native implementations, no TA-Lib dependency)
    "scipy>=1.11.4,<2.0.0",
    "statsmodels>=0.14.1,<1.0.0",
    
    # NLP & Sentiment Analysis
    "transformers>=4.37.0,<5.0.0",
    "torch>=2.1.0",  # Required for transformers
    "sentencepiece>=0.1.99,<1.0.0",
    
    # Logging & Monitoring
    "loguru>=0.7.2,<1.0.0",
    "mlflow>=2.10.0,<3.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    
    # Configuration & Environment
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    
    # Utilities
    "python-dateutil>=2.8.2,<3.0.0",
    "pytz>=2024.1",
    
    # Visualization
    "plotly>=5.18.0,<6.0.0",
    "matplotlib>=3.8.2,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    
    # HTTP & Async
    "httpx>=0.26.0,<1.0.0",
    "aiohttp>=3.9.1,<4.0.0",
    
    # Data Validation
    "jsonschema>=4.20.0,<5.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.3,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "black>=24.1.0,<25.0.0",
    "ruff>=0.1.14,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "isort>=5.13.2,<6.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

# Frontend dependencies
frontend = [
    "streamlit>=1.30.0,<2.0.0",
    "streamlit-aggrid>=0.3.4,<1.0.0",
    "streamlit-extras>=0.3.6,<1.0.0",
]

# Jupyter & Notebooks
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.0.10,<5.0.0",
    "ipywidgets>=8.1.1,<9.0.0",
    "notebook>=7.0.6,<8.0.0",
]

# GPU acceleration (optional)
# Note: For CUDA support, install PyTorch separately:
# pip install torch --index-url https://download.pytorch.org/whl/cu121
cuda = []

# Documentation
docs = [
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocs-material>=9.5.3,<10.0.0",
    "mkdocstrings[python]>=0.24.0,<1.0.0",
]

# Production monitoring
monitoring = [
    "sentry-sdk[fastapi]>=1.40.0,<2.0.0",
    "datadog>=0.48.0,<1.0.0",
]

# All optional dependencies
all = [
    "lumina-quant-lab[dev,frontend,jupyter,docs,monitoring]",
]

[project.urls]
Homepage = "https://github.com/yourusername/lumina-quant-lab"
Documentation = "https://lumina-quant-lab.readthedocs.io"
Repository = "https://github.com/yourusername/lumina-quant-lab"
"Bug Tracker" = "https://github.com/yourusername/lumina-quant-lab/issues"

[project.scripts]
lumina = "backend.cli:main"
lumina-api = "backend.api.main:app"
lumina-worker = "backend.workers.celery_app:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "frontend"]

[tool.setuptools.package-data]
backend = ["py.typed"]

# ============================================================================
# Black Configuration (Code Formatting)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# Ruff Configuration (Fast Linter)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # Allow raising exceptions without from e
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.isort]
known-first-party = ["backend", "frontend"]

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "alpha_vantage.*",
    "celery.*",
    "mlflow.*",
    "streamlit.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "api: marks API tests",
    "agent: marks RL agent tests",
]
asyncio_mode = "auto"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# Isort Configuration (Import Sorting)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["backend", "frontend"]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "torch",
    "numpy",
    "pandas",
]
skip_glob = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

# ============================================================================
# Bandit Configuration (Security Linting)
# ============================================================================
[tool.bandit]
exclude_dirs = [
    "/tests",
    "/migrations",
    "/.venv",
    "/venv",
]
skips = [
    "B101",  # assert_used
    "B601",  # paramiko_calls
]

# ============================================================================
# PyLint Configuration
# ============================================================================
[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

# ============================================================================
# UV Configuration (Fast Package Installer)
# ============================================================================
[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

# ============================================================================
# Project Metadata
# ============================================================================
[tool.setuptools.dynamic]
version = {attr = "backend.__version__"}

# ============================================================================
# Environment Variables (for reference)
# ============================================================================
# NOTE: Actual values should be in .env file
# Required environment variables:
# - DATABASE_URL: PostgreSQL connection string
# - REDIS_HOST: Redis host
# - REDIS_PORT: Redis port
# - SECRET_KEY: JWT secret key
# - MLFLOW_TRACKING_URI: MLflow tracking server
# - YFINANCE_API_KEY: (optional) YFinance API key
# - ALPHA_VANTAGE_API_KEY: (optional) Alpha Vantage API key
# - NEWS_API_KEY: (optional) News API key
# ============================================================================
