[project]
name = "lumina-project"
version = "3.0.0"
description = "Lumina V3 — Chimera deep-fusion algorithmic trading system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Francisco Javier Mercader Martínez" }]

dependencies = [
  # Web / API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "websockets>=12.0",
  # DB
  "asyncpg>=0.29",
  "redis>=5.0",
  "alembic>=1.13",
  # Data
  "polars>=0.20",
  "numpy>=1.26",
  "beautifulsoup4>=4.12",
  # ML
  "torch>=2.2",
  "torch-geometric>=2.5",
  "transformers>=4.38",
  "scikit-learn>=1.4",
  "gymnasium>=0.29",
  # Broker
  "alpaca-py>=0.20",
  # MLOps / observability
  "mlflow>=2.10",
  "prometheus-client>=0.20",
  "loguru>=0.7",
  "tenacity>=8.2",
  "tqdm>=4.66",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

# ---------------------------------------------------------------------------
# UV configuration
# ---------------------------------------------------------------------------
[tool.uv]
# PyTorch index for CUDA builds (uncomment and adjust for your CUDA version)

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

# ---------------------------------------------------------------------------
# Build system (hatchling is UV's recommended backend)
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = ["N806"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "slow: marks tests that require significant computation (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require a GPU",
  "integration: marks integration tests",
]

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
skips = ["B101", "B404", "B603", "B607", "B615"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
